syntax="proto3";

package ds_udfs;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
//import "google/protobuf/timestamp.proto";


message DsUdfsBean {
    string id=1;
    int32 user_id=2;
    optional int32 ip=3;
    // google.protobuf.Timestamp last_login_time=4 ;
    optional string last_login_time=4 ;
}
// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsUdfsBeanService {
  rpc ListDsUdfsBeans(ListDsUdfsBeansRequest) returns (ListDsUdfsBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsUdfsBeans"
    };
  }

  rpc GetDsUdfsBean(GetDsUdfsBeanRequest) returns (DsUdfsBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsUdfsBeans/*}"
    };
  }

  rpc CreateDsUdfsBean(CreateDsUdfsBeanRequest) returns (DsUdfsBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsUdfsBeans"
      body: "DsUdfsBean"
    };
  }

  rpc UpdateDsUdfsBean(UpdateDsUdfsBeanRequest) returns (DsUdfsBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsUdfsBean.name=DsUdfsBeans/*}"
      body: "DsUdfsBean"
    };
  }

  rpc DeleteDsUdfsBean(DeleteDsUdfsBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsUdfsBeans/*}"
    };
  }
}

// message DsUdfsBean {
// ! This should be defined elsewhere
// }

message ListDsUdfsBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsUdfsBeansResponse {
  // The field name should match the noun "DsUdfsBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsUdfsBean DsUdfsBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsUdfsBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsUdfsBeanRequest {
  // The parent resource name where the DsUdfsBean is to be created.
  string parent = 1;

  // The DsUdfsBean id to use for this DsUdfsBean.
  string DsUdfsBean_id = 2;

  // The DsUdfsBean resource to create.
  // The field name should match the Noun in the method name.
  DsUdfsBean DsUdfsBean = 3;
}

message UpdateDsUdfsBeanRequest {
  // The DsUdfsBean resource which replaces the resource on the server.
  DsUdfsBean DsUdfsBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsUdfsBeanRequest {
  // The resource name of the DsUdfsBean to be deleted.
  string name = 1;
}
